# django-generate-series

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  dev.yml  docker-compose.yml  noxfile.py  pyproject.toml  pytest.ini  runtests.py  tasks.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: django.yml
compose/postgres/: Dockerfile  extensions.sql
django_generate_series/: apps.py  base.py  exceptions.py  models.py  type_checking.py  urls.py
docs/: conf.py  contributing.md  index.md  installation.md  requirements.txt  usage_examples.md
src/django_generate_series/: app_settings.py  models.py
tests/: README.md  conftest.py  requirements.txt  settings.py  urls.py
tests/example/: readme.md  urls.py
tests/example/core/: apps.py  date_utils.py  models.py  random_utils.py  sequence_utils.py  tests.py
tests/example/core/migrations/: 0001_initial.py  0002_auto_20220427_1836.py  0002_simpleorder.py  0003_remove_event_false_field.py  0004_remove_simpleorder_and_event.py
