[tool.poetry]
name = "django-generate-series"
version = "1.0.0b1"
description = "Use Postgres' generate_series to create sequences with Django's ORM"
authors = ["Jack Linke <jack@watervize.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jacklinke/django-generate-series/"
documentation = "https://django-generate-series.readthedocs.io/en/latest/"
keywords = [
    "sequence",
    "generating",
    "series",
    "set",
    "set-returning",
    "queryset",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=4.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.0"
codecov = ">=2.1"
coverage = ">=7.0"
django-extensions = ">=3.2"
docutils = ">=0.21"
flake8 = ">=6"
invoke = ">=2.0"
isort = ">=5.13"
mock = ">=5.0"
myst-parser = ">=3.0"
pre-commit = ">=3.7"
psycopg2-binary = ">=2.9"
pytest = ">=8.0"
pytest-cov = ">=4.0"
pytest-django = ">=4.7"
pytest-sugar = ">=1.0"
sphinx = ">=7.0"
sphinxcontrib-mermaid = ">=0.9"
tox = ">=4.14"
tox-gh-actions = ">=3.1.3"
twine = ">=5.0"
Werkzeug = ">=3.0"
wheel = ">=0.43"
"zest.releaser" = ">=9.0"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = {py310,py311,py312,py313}-django{42,50,51}

[gh-actions]
python =
    3.10: py311-django42, py311-django50, py311-django51
    3.11: py311-django42, py311-django50, py311-django51
    3.12: py312-django42, py312-django50, py312-django51
    3.13: py313-django42, py313-django50, py313-django51

[testenv]
deps =
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
basepython =
    py310: python3.10
    py311: python3.11
    py312: python3.12
    py313: python3.13
allowlist_externals =
    poetry
    bash
extras =
    dev
skip_install = true
# Recommended in discussion at https://github.com/python-poetry/poetry/issues/1745#issuecomment-648365339
commands =
    bash -c 'poetry export --with dev --without-hashes -f requirements.txt | grep -v "^[dD]jango==" | poetry run pip install --no-deps -r /dev/stdin'
    # Show we have the right Django version
    poetry run django-admin --version
    poetry run pytest tests/
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
