[build-system]
requires = ["setuptools>=75.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-generate-series"
version = "2026.2.1"
description = "Use Postgres' generate_series to create sequences with Django's ORM"
authors = [{ name = "Jack Linke", email = "jack@watervize.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
]
keywords = [
    "sequence",
    "generating",
    "series",
    "set",
    "set-returning",
    "queryset",
]
dependencies = ["django>=4.2"]

[project.urls]
Source = "https://github.com/OmenApps/django-generate-series"
Documentation = "https://django-generate-series.readthedocs.io/en/latest/"
Issues = "https://github.com/OmenApps/django-generate-series/issues"
Changelog = "https://github.com/OmenApps/django-generate-series/releases"

[project.optional-dependencies]
dev = [
    "bandit>=1.9.3",
    "coverage[toml]>=7.8.2",
    "darglint>=1.8.1",
    "django-extensions>=4.1",
    "flake8>=7.2.0",
    "flake8-bugbear>=24.12.12",
    "flake8-docstrings>=1.7.0",
    "flake8-rst-docstrings>=0.3.1",
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "nox>=2025.11.12",
    "pep8-naming>=0.15.1",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "psycopg[binary]>=3.1",
    "Pygments>=2.19.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pyupgrade>=3.21.2",
    "ruff>=0.14.13",
    "pip-audit>=2.7.3",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-click>=6.0.0",
    "Werkzeug>=3.1.3",
    "xdoctest[colors]>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80
omit = [".nox/*", "tests/*", "**/migrations/*", "**/__init__.py"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [".tox", ".git", ".github", "*/migrations/*", "*/static/*", "build", "compose", "dist", "docs", "*.egg-info", "*env", "*/django_generate_series/*"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 120
exclude = ["tests"]

[tool.ruff.lint]
select = ["D", "E", "W", "F", "I"]
ignore = ["D1", "D203", "D205", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
